# libzoo

./: .gitignore  LICENSE  Makefile.am  configure.ac  zoo_config.h.in
frontend/gba/: Makefile
frontend/gba/source/: main.c  sound.c  zoo_config.h  zoo_gba.h
frontend/gba/tools/: pack4x6.py
frontend/sdl/: main.c  render_software.c  render_software.h  types.h  zoo_config.h
include/: zoo.h  zoo_config.h  zoo_io_path.h  zoo_io_posix.h  zoo_io_romfs.h  zoo_sidebar.h  zoo_sound_pcm.h  zoo_ui.h  zoo_ui_input.h
src/: Makefile  zoo.c  zoo.h  zoo_config.h  zoo_config_defaults.h  zoo_element_defs.inc  zoo_elements.c  zoo_game.c  zoo_game_io.c  zoo_input.c  zoo_io.c  zoo_io_posix.c  zoo_oop.c  zoo_sidebar_classic.c  zoo_sidebar_slim.c  zoo_sound.c  zoo_sound_pcm.c  zoo_ui.c  zoo_ui_classic.c  zoo_ui_slim.c  zoo_window.c  zoo_window_classic.c
src/drivers/: zoo_io_path.c  zoo_io_path.h  zoo_io_posix.c  zoo_io_posix.h  zoo_io_romfs.c  zoo_io_romfs.h  zoo_sound_pcm.c  zoo_sound_pcm.h
src/frontend/atari_tos/: Makefile
src/frontend/atari_tos/src/: main.c
src/frontend/atari_tos/tools/: pack1bit.py
src/frontend/gba/: Makefile
src/frontend/gba/src/: main.c  sound_gba.c  sound_gba.h  video_gba.c  video_gba.h  zoo_gba.h
src/frontend/gba/tools/: pack6x10.py
src/frontend/psp/: Makefile
src/frontend/psp/src/: main.c
src/frontend/sdl/: Makefile
src/frontend/sdl/src/: 8x14.c  main.c
src/libzoo/: zoo.c  zoo.h  zoo_callstack.c  zoo_config.h  zoo_element_defs.inc  zoo_elements.c  zoo_game.c  zoo_game_io.c  zoo_input.c  zoo_internal.h  zoo_io.c  zoo_oop.c  zoo_oop_label_cache.c  zoo_oop_token.tok  zoo_sound.c  zoo_window.c  zoo_window_classic.c
src/ui/: zoo_sidebar.h  zoo_sidebar_classic.c  zoo_sidebar_slim.c  zoo_ui.c  zoo_ui.h  zoo_ui_debug.c  zoo_ui_file_select.c  zoo_ui_input.c  zoo_ui_internal.h  zoo_ui_osk.c  zoo_ui_prompt.c  zoo_ui_util.c
tools/: bin2c.py  tok2c.py  tok2c_tpl.c
